...
                ToolbarItem(placement: .bottomBar) {
                    Button("Ball") {
                        game.umpCalls(.ball)
                    }
                }
                ToolbarItem(placement: .bottomBar) {
                    Button("Strike") {
                        game.umpCalls(.strike)
                    }
                }
                ToolbarItem(placement: .bottomBar) {
                    Button("Foul") {
                        game.umpCalls(.foulball)
...
                    Button("Out") {
                        // presentingOutPopup.toggle()
                    }
                }
                
            } // toolbar
            .accessibilityIdentifier("Toolbar")
            
            
            // the primary view is the Group
            // the secondary view on iPad or wide screens like iPhone Pro Max
            //SelectSomethingView()
            
...
